--- a/blocks/popup-form/__item/popup-form__item.css
+++ b/blocks/popup-form/__item/popup-form__item.css
@@ -1,7 +1,7 @@
 .popup-form__item {
     border: 0;
     width: 100%;
-    height: 40px;
+    min-height: 40px;
     box-sizing: border-box;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     background-color: transparent;
@@ -17,6 +17,6 @@
 
 @media (max-width: 500px) {
     .popup-form__item {
-        height: 35px;
+        min-height: 35px;
     }
 }
