--- a/blocks/popup-form/__button/popup-form__button.css
+++ b/blocks/popup-form/__button/popup-form__button.css
@@ -9,12 +9,13 @@
     font-style: normal;
     color: #fff;
     background-color: #000;
-    transition: opacity .3s ease-in-out;
+    margin-top: auto;
+    /* transition: opacity .3s ease-in-out; */
 }
 
-.popup-form__button:hover {
+/* .popup-form__button:hover {
     opacity: 0.8;
-}
+} */
 
 @media (max-width: 500px) {
     .popup-form__button {
