--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,8 +1,8 @@
 .profile__info {
     position: relative;
     max-width: 50%;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
 }
 
 @media (max-width: 800px) {
