--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -6,6 +6,7 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     text-rendering: optimizeLegibility;
+    background-color: #000;
     color: #ffffff;
     max-width: 1280px;
     min-width: 320px;
