--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,16 +1,16 @@
 .elements {
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
     gap: 20px 17px;
     justify-content: center;
     align-items: center;
     max-width: 880px;
     margin: 0 auto 66px;
-    padding: 0 19px;
+    padding: 0 19px; */
 }
 
 @media (max-width: 800px) {
     .elements {
-        margin-bottom: 48px;
+        /* margin-bottom: 48px; */
     }
 }
