--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -6,8 +6,9 @@
     border: none;
     outline: none;
     background-image: url(../../../images/LikeButton.svg);
-    background-size: contain;
+    background-size: 22px 19px;
     background-repeat: no-repeat;
     background-position: center;
     margin-left: 20px;
+    box-sizing: content-box;
 }
