--- a/blocks/element/__del-button/element__del-button.css
+++ b/blocks/element/__del-button/element__del-button.css
@@ -5,10 +5,12 @@
     background: none;
     outline: none;
     border: none;
-    box-sizing: border-box;
     background-image: url(../../../images/delButton.svg);
     background-size: 18px 19px;
+    background-repeat: no-repeat;
     position: absolute;
+    margin: 0;
+    padding: 0;
     right: 20px;
     top: 20px;
 }
