--- a/pages/index.css
+++ b/pages/index.css
@@ -48,3 +48,4 @@
 @import url(../blocks/popup/__close-button/_add/popup__close-button_add.css);
 @import url(../blocks/popup/__close-button/_edit/popup__close-button_edit.css);
 @import url(../blocks/popup/__close-button/_zoom/popup__close-button_zoom.css);
+@import url(../blocks/popup/_dark/popup_dark.css);
