--- a/blocks/popup-form/__button/popup-form__button.css
+++ b/blocks/popup-form/__button/popup-form__button.css
@@ -10,12 +10,8 @@
     color: #fff;
     background-color: #000;
     margin-top: auto;
-    /* transition: opacity .3s ease-in-out; */
+    cursor: pointer;
 }
-
-/* .popup-form__button:hover {
-    opacity: 0.8;
-} */
 
 @media (max-width: 500px) {
     .popup-form__button {
