--- a/blocks/popup-form/__item/_el/popup-form__item_el_url.css
+++ b/blocks/popup-form/__item/_el/popup-form__item_el_url.css
@@ -1,3 +1,9 @@
 .popup-form__item_el_url {
-    
+    margin-top: 17px;
+}
+
+@media (max-width: 500px) {
+    .popup-form__item_el_url {
+        margin-top: 21px;
+    }
 }
