--- a/blocks/popup/__conteiner/popup__conteiner.css
+++ b/blocks/popup/__conteiner/popup__conteiner.css
@@ -10,6 +10,7 @@
     box-sizing: border-box;
     display: flex;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    cursor: default;
 }
 
 @media (max-width: 500px) {
