Проектная работа 7 на проверку после замечаний 1

--- a/blocks/popup-form/__button/popup-form__button.css
+++ b/blocks/popup-form/__button/popup-form__button.css
@@ -19,3 +19,11 @@
         height: 46px;
     }
 }
+
+.popup-form__button:enabled {
+    transition: opacity .3s ease-in-out;
+}
+
+.popup-form__button:enabled:hover {
+    opacity: 0.8;
+}
