Проектная работа 8 на проверку

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -13,6 +13,5 @@
     align-items: center;
     visibility: hidden;
     opacity: 0;
-    transition: .5s;
-    /* cursor: pointer; */
+    transition: opacity .5s;
 }
