--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,13 +1,13 @@
 .profile__avatar {
+    position: absolute;
     height: 120px;
     width: 120px;
     border-radius: 50%;
-    margin-right: 30px;
+    object-fit: cover;
+    transition: opacity .3s ease-in-out;
 }
 
-@media (max-width: 800px) {
-    .profile__avatar {
-        margin: 0;
-        margin-bottom: 26px;
-    }
+.profile__avatar:hover {
+    opacity: 0.2;
+    cursor: pointer;
 }
